Quick fix
Fixed an issue that caused text in inputs to be invisible.

--- a/static/css/edit-additional-offer-layout.css
+++ b/static/css/edit-additional-offer-layout.css
@@ -39,7 +39,6 @@ p {
 
 #programManagementTabs input {
   width: 50%;
-  color: #fff;
   margin: 5px 0 15px 0;
 }
 
